# tree-sitter-os

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  file.os  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-os.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_os/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterOs/: os.h
bindings/swift/TreeSitterOsTests/: TreeSitterOsTests.swift
src/: grammar.json  node-types.json  parser.c
